RESOLVED FIXED269308
Null pointer dereference in elementHasClassInClosestAncestors
https://bugs.webkit.org/show_bug.cgi?id=269308
Summary Null pointer dereference in elementHasClassInClosestAncestors
Sihui Liu
Reported 2024-02-13 11:35:15 PST
...
Attachments
Sihui Liu
Comment 1 2024-02-13 11:35:50 PST
Sihui Liu
Comment 2 2024-02-13 11:37:47 PST
EWS
Comment 3 2024-02-13 14:16:26 PST
Committed 274575@main (31136601a244): <https://commits.webkit.org/274575@main> Reviewed commits have been landed. Closing PR #24358 and removing active labels.
Charlie Wolfe
Comment 4 2024-03-05 18:40:56 PST
*** Bug 270548 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.