Null pointer dereference in elementHasClassInClosestAncestors https://bugs.webkit.org/show_bug.cgi?id=269308 rdar://122892811

Reviewed by Brent Fulgham.

Ensure ancestor is non-null before accessing it.

* Source/WebCore/page/Quirks.cpp:
(WebCore::elementHasClassInClosestAncestors):

Canonical link: https://commits.webkit.org/274575@main